infra/proxmox/vms/orchestration/k8s/keda/yml-httpd/httpd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: httpd
      containers:
      - name: httpd
        image: php:apache
        ports:
        - containerPort: 80
        volumeMounts:
        - name: delay-php-volume
          mountPath: /var/www/html/index.php
          subPath: index.php
      volumes:
      - name: delay-php-volume
        configMap:
          name: delay-php-config
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: default
spec:
  selector:
    app: httpd
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
